--- a/views/pages/website/index.pug
+++ b/views/pages/website/index.pug
@@ -27,6 +27,7 @@ block content
 
 
 block js
+  script(src="/admin-lte-3/javascripts/moment.min.js")
   script(src="/admin-lte-3/javascripts/website/index.js")
   script.
     websiteTable('#{session.user.acc_type}')
