--- a/views/pages/setting/edit.pug
+++ b/views/pages/setting/edit.pug
@@ -31,7 +31,7 @@ block content
                                 textarea#section_filters.form-control(name="section_filters", cols="30", rows="10")
                                     | {
                                     |    "includes": [],
-                                    |    "excludes": []
+                                    |    "excludes": ["\\/tags\\/", "\\/tag\\/", "\\/search\\/", "\\/labels\\/", "\\/label\\/"]
                                     | }
 
                             .col-sm-12
@@ -39,7 +39,7 @@ block content
                                 textarea#article_filters.form-control(name="article_filters", cols="30", rows="10")
                                     | {
                                     |    "includes": [],
-                                    |    "excludes": []
+                                    |    "excludes": ["\\/tags\\/", "\\/tag\\/", "\\/search\\/", "\\/labels\\/", "\\/label\\/"]
                                     | }
                             
                             .col-sm-12
